--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1005,7 +1005,7 @@ main {
 
 .project-img img {
   width: 100%;
-  height: 100%;
+  height: 200px;
   object-fit: cover;
   transition: var(--transition-1);
 }
